fix: display of header background image on mobile screen #2

--- a/src/assets/styles/_media.scss
+++ b/src/assets/styles/_media.scss
@@ -152,6 +152,10 @@
 }
 
 @media screen and (max-width: 500px) {
+    .header {
+        background-size: auto 100%;
+    }
+
     .header__bar {
         flex-direction: column;
     }
